--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
 </head>
 
 <body>
+  <section id="banner">
+    <h1 class="title title-sticky">特別感謝</h1>
 
+    <div class="title-container">
+      <h3 class="title title-item">Rong Hao 大大</h3>
+      <h3 class="title title-item">凱強 強一個</h3>
+      <h3 class="title title-item">偉凱好棒</h3>
+      <h3 class="title title-item">Ken 爺 熱心協助</h3>
+    </div>
+
+    <div class="down">↓</div>
+  </section>
+
+
+  <!-- <p>
+    Photo by <a
+      href="https://unsplash.com/@jeroenbendeler?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeroen
+      Bendeler</a> on <a
+      href="https://unsplash.com/s/photos/peaceful?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+  </p> -->
 
   <script src="js/index.js"></script>
 </body>
