--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
 <body>
   <section id="banner">
-    <h1 class="title title-sticky">特別感謝</h1>
+    <div class="banner-head banner-head--sticky">
+      <div class="banner-logo"></div>
+
+      <h1 class="title title-banner">特別感謝</h1>
+
+      <div class="banner-space"></div>
+
+      <div class="button-down">↓</div>
+    </div>
 
     <div class="title-container">
       <h3 class="title title-item">Rong Hao 大大</h3>
@@ -19,18 +27,12 @@
       <h3 class="title title-item">偉凱好棒</h3>
       <h3 class="title title-item">Ken 爺 熱心協助</h3>
     </div>
-
-    <div class="down">↓</div>
   </section>
 
+  <section id="img-parallax"></section>
 
-  <!-- <p>
-    Photo by <a
-      href="https://unsplash.com/@jeroenbendeler?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeroen
-      Bendeler</a> on <a
-      href="https://unsplash.com/s/photos/peaceful?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  </p> -->
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 
